[package]
name = "jenkins-atom-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
atom_syndication = { version = "0.12.4" }
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
expanduser = "1.2.2"
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["all-widgets", "scrolling-regions", "unstable-rendered-line-info"] }
regex = "1.11.0"
reqwest = { version = "0.12.9", features = ["cookies"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tui-scrollview = "0.5.0"
